# Arceus

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  RELEASE_GUIDE.md  SENSORS.md  SETUP.md  SYSTEM_ARCHITECTURE.md  UPDATE_SETUP.md  flake.nix  index.html  package-lock.json  package.json  publish.cjs  schema.sql  tailwind.config.js  update-manifest.json
alakazam/: .gitignore  Cargo.toml  Dockerfile  reset_database.sql
alakazam/migrations/: 20260101155107_initial_schema.sql  20260112180000_add_gyros_versions.sql  reset_database.sql
alakazam/src/: config.rs  db.rs  error.rs  main.rs
alakazam/src/api/: auth.rs  mod.rs  routes.rs
alakazam/src/api/handlers/: admin.rs  arcade.rs  game.rs  mod.rs  sensor.rs  snorlax.rs
alakazam/src/config/: mod.rs
alakazam/src/domain/: mod.rs
alakazam/src/domain/dto/: assignment.rs  auth.rs  client.rs  game.rs  game_version.rs  mod.rs
alakazam/src/domain/entities/: assignment.rs  client.rs  game.rs  game_version.rs  manifest.rs  mod.rs
alakazam/src/domain/value_objects/: ids.rs  mod.rs  version_status.rs
alakazam/src/error/: mod.rs
alakazam/src/models/: arcade.rs  customer.rs  game.rs  gyros.rs  mod.rs  release_channel.rs  sensor.rs  snorlax.rs
alakazam/src/repositories/: arcade_repo.rs  channel_repo.rs  customer_repo.rs  game_repo.rs  gyros_repo.rs  mod.rs  sensor_repo.rs  snorlax_repo.rs
alakazam/src/routes/: health.rs  mod.rs
alakazam/src/services/: admin_service.rs  arcade_service.rs  gcs_service.rs  gyros_service.rs  mod.rs  sensor_service.rs  snorlax_service.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: apk_commands.rs  device_commands.rs  game_commands.rs  helpers.rs  mod.rs  sensor_commands.rs  update_commands.rs
src-tauri/src/app/: config.rs  events.rs  lifecycle.rs  mod.rs  server_manager.rs  signal_handler.rs
src-tauri/src/app/models/: config.rs  mod.rs  update.rs
src-tauri/src/application/dto/: client_apk_metadata.rs  command.rs  device.rs  game_version.rs  mod.rs  operation_progress.rs
src-tauri/src/application/services/: apk_app_service.rs  battery_monitor.rs  client_apk_service.rs  device_app_service.rs  game_app_service.rs  game_version_service.rs  http_server_service.rs  mod.rs  sensor_service.rs  update_service.rs
src-tauri/src/commands/: apk_commands.rs  device_commands.rs  game_commands.rs  helpers.rs  mod.rs  update_commands.rs
src-tauri/src/core/: command.rs  config.rs  error.rs  events.rs  mod.rs  server_manager.rs  signal_handler.rs  validation.rs
src-tauri/src/core/models/: apk.rs  battery.rs  command.rs  device.rs  main.rs  mod.rs  update.rs  volume.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/commands/: command.rs  device_commands.rs  mod.rs
src-tauri/src/domain/models/: battery.rs  device.rs  device_id.rs  game.rs  game_id.rs  ip_address.rs  mod.rs  package_name.rs  sensor.rs  serial.rs  volume.rs
src-tauri/src/domain/repositories/: apk_repository.rs  client_apk_repository.rs  device_name_repository.rs  device_repository.rs  error.rs  mod.rs  (+1 more)
src-tauri/src/handlers/: apk_install_handler.rs  battery_handler.rs  command_response_handler.rs  device_connected_handler.rs  error_handler.rs  handler_registry.rs  heartbeat_handler.rs  installed_apps_handler.rs  launch_app_handler.rs  mod.rs  packet_handler.rs  ping_handler.rs  registry.rs  shell_execution_handler.rs  shutdown_handler.rs  traits.rs  uninstall_app_handler.rs  volume_handler.rs  volume_set_handler.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/net/: io.rs  macros.rs  mod.rs
src-tauri/src/network/: connection_manager.rs  device.rs  device_name_manager.rs  http_server.rs  mod.rs  tcp_server.rs
src-tauri/src/protocol/: client_packet.rs  codec.rs  message_type.rs  mod.rs  new_codec.rs  opcodes.rs  packet.rs  primitives.rs  raw_codec.rs  server_packet.rs
src-tauri/src/services/: apk_service.rs  battery_monitor.rs  device_service.rs  mod.rs  update_service.rs
src-tauri/src/storage/: device_names_store.rs  mod.rs
(+184 files in other folders)
