[package]
name = "arceus"
version = "0.1.1"
description = ""
authors = ["B3n00n"]
edition = "2024"

[lib]
name = "arceus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
semver = "1"
thiserror = "1"
