[package]
name = "arkeus"
version = "0.3.2"
description = ""
authors = ["B3n00n"]
edition = "2024"

[lib]
name = "arceus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
semver = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.8"
byteorder = "1.5"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
local-ip-address = "0.6"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
mac_address = "1.1"
base64 = "0.22.1"
